bugfix sql rawdata not showing

--- a/src/components/SQLRawTable/SQLRawTable.module.scss
+++ b/src/components/SQLRawTable/SQLRawTable.module.scss
@@ -5,12 +5,12 @@
     border-radius: $sp-base;
     width:100%;
     border-spacing: 0;
-    height:80px;
+    min-height:32px;
     max-height:200px;
     overflow:auto;
     td {
         border-bottom: 1px solid $grey-800;
-        padding:$sp-base * 2 $sp-base * 2;
+        padding:$sp-base $sp-base * 2;
         color:$grey-50;
         
     } tr {
